--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,6 +92,10 @@ body {
   margin-left: 10px;
 }
 
+.todo-content {
+  margin-left: 5px;
+}
+
 .todo-item {
   display: flex;
   justify-content: space-between;
